2002-03-17  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-stream-flush-buffer): use
	WRITE-CHAR-SEQUENCE instead of WRITE-SEQUENCE for the benefit of
	dribbling when the output streams are reset so that it is not
	clear that they are character streams

2002-03-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* describe.lisp (describe-object): FOREIGN-POINTER is present
	when UNIX or DIR-KEY are present too;
	handle FOREIGN-FUNCTION only under FUNCTION, not undet T too, and
	print its full foreign type

2002-03-15  Sam Steingold  <sds@gnu.org>

	minor error reporting unification
	* lispbibl.d (fehler_too_many_args, fehler_too_few_args): declare
	* error.d (fehler_too_many_args, fehler_too_few_args): implement
	* foreign.d (FOREIGN-CALL-OUT): use them
	* eval.d (fehler_key_zuviel): removed
	(match_subr_key, match_cclosure_key): use fehler_too_many_args()
	(fehler_apply_[zuviel/zuwenig]): unchanged for now: it is unclear
	how to keep enough info for a good error message without taking a
	performane hit in apply_*()
	(fehler_apply_dotted): accept another argument -
	the arglist terminator

2002-03-15  Sam Steingold  <sds@gnu.org>

	Incorporated more of Joerg's suggestions
	* bindings/linuxlibc6/linux.lisp (substitution): added ffi:c-ptr-null
	(realpath, gethostname, getdomainname): using arrays of `character'
	as opposed to `char' results in strings being returned instead of
	byte arrays (char=uint8, character is a lisp CHARACTER)
	(gcvt): appears to work
	(sigaction-new): allow NULL (NIL) first arg
	(sigaction-query): removed (superseded by sigaction-new)
	* bindings/linuxlibc6/wrap.lisp (vec2string): obsolete, commented out
	(real-path, get-host-name, get-domain-name): do not use it
	(signal-valid-p): use sigaction-new

2002-03-15  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (expand-compiler-macro): do not expand compiler
	macros for functions declared NOTINLINE

2002-03-14  Sam Steingold  <sds@gnu.org>
